2009-10-17  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/apps-menu.jl: removed dupped Development Category from Developmentmenu
	                                    added Editors Category to Developmentmenu

2009-10-16  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/user.jl
	* lisp/sawfish/wm/ext/apps-menu.jl: User can prepend their own apps-menu to the auto generated one. Cleanups, mostly in variables.

	* README.IMPORTANT
	* man/news.texi: News rewritement.

2009-10-15  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/defaults.jl
	* lisp/sawfish/wm/user.jl
	* man/faq.texi
	* man/news.texi: News and doc that sawfish.wm.defaults is always read, regardless of .sawfishrc existence.

	* lisp/sawfish/wm/windows.jl: Bugfix; deleted a wrong quote.

2009-10-15  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/commands/grow-pack.jl: make Grow Pack Shrink Yank subgroup of Move Resize

2009-10-13  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/tabs/tab.jl
	* lisp/sawfish/wm/ext/edge-flip.jl
	* lisp/sawfish/wm/workspace.jl: export setter functions
					- raise-tabs-on-hover-setter
					- edge-flip-enable
					- display-ws-name-setter

	* OPTIONS: updated

2009-10-09  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/menus.jl: added "Reload Appsmenu" entry

	* src/windows.c: more work on the race condition fix [Janek Kozicki]

2009-10-09  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/commands/user.jl
	* man/news.texi:  Deleted functions `some' and `program-available'. They should be in librep.  They are adopted in commit e1f68c.

2009-10-08  Christopher Bratusek <zanghar@freenet.de>
	* ChangeLog
	* man/sawfish.texi
	* lisp/sawfish/wm/focus.jl
	* lisp/sawfish/wm/transient.jl: revert timo/kde-menu-focus branch merge, (re)merge timo/focus-revert instead

2009-10-07  Jeremy Hankins <nowan@nowan.org>